--- a/src/main/resources/templates/OrderEmail.html
+++ b/src/main/resources/templates/OrderEmail.html
@@ -6,7 +6,7 @@
     <title>Title</title>
 
     <style>
-        .div {
+        div {
             color: blue;
             font-size: 50px;
         }
