--- a/src/main/resources/templates/OrderEmail.html
+++ b/src/main/resources/templates/OrderEmail.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-    <h1 th:text="${orderName}">님의 주문내역</h1>
+    <h1 th:text="|${orderName}님의 주문내역|"></h1>
 <!--    <h1 th:text="${orderName}님의 주문내역"></h1>-->
     <h1>orderDate </h1><h1 th:text="${#temporals.format(date,'yyyy-MM-dd HH:mm')}"></h1>
     <h1>total </h1><h1 th:text="${total}"></h1>
