--- a/src/main/resources/templates/OrderEmail.html
+++ b/src/main/resources/templates/OrderEmail.html
@@ -6,18 +6,28 @@
     <title>Title</title>
 
     <style>
+        h1	{ text-align: center; }
         div {
-            color: blue;
-            font-size: 50px;
+            font-size: 20px;
         }
     </style>
 </head>
 <body>
-    <h1 th:text="|${orderName}님의 주문내역|"></h1>
-<!--    <h1 th:text="${orderName}님의 주문내역"></h1>-->
-    <h1>orderDate </h1><h1 th:text="${#temporals.format(date,'yyyy-MM-dd HH:mm')}"></h1>
-    <h1>total </h1><h1 th:text="${total}"></h1>
-    <h1>Memo </h1><h1 th:text="${memo}"></h1>
+    <h1>ORDER CONFIRMATION</h1>
+    <hr>
+    <div 안녕하세요 th:text="|${orderName} 님.|"></div>
+    <div>Our Clothing을 이용해주셔서 감사합니다. 고객님의 주문이 확인 되었습니다.</div>
+    <div style="color:red;">주문 폭주로 인해 배송이 지연될 수 있는 점 참고 부탁드립니다.</div>
+    <div>평소보다 대략 3~5일 정도 소요 예정입니다.(토요일, 공휴일 제외).</div>
+    <div>최대한 빨리 출고할 수 있도록 노력하겠습니다.</div>
+    <div>감사합니다.</div>
+    <div>관련하여 문의사항은 홈페이지의 Q&A로 주문번호와 함께 문의하여 주시기 바랍니다.</div>
+    <hr>
+    <h2 th:text="|ORDER NO. ${orders['orderId'].getOrderId()}|"></h2>
+    <h2 th:text="|${orderName}님의 주문내역|"></h2>
+    <h2>주문시간 </h2><h1 th:text="${#temporals.format(date,'yyyy-MM-dd HH:mm')}"></h1>
+    <h2>총 금액 </h2><h1 th:text="${total}"></h1>
+    <h1 th:text="${memo}"></h1>
 <!--    <h1 th:text="주문시간  ${date}>orderDate"></h1>-->
 <!--    <h1 th:text="주문하신 상품의 총 금액은 ${total}원 입니다."></h1>-->
 <!--    <h1>image </h1><img src="${orders['order_id'].getItemEntity().getItemProfile()}">-->
