--- a/src/main/resources/templates/OrderEmail.html
+++ b/src/main/resources/templates/OrderEmail.html
@@ -15,7 +15,7 @@
 <body>
     <h1>ORDER CONFIRMATION</h1>
     <hr>
-    <div 안녕하세요 th:text="|${orderName} 님.|"></div>
+    <div th:text="|안녕하세요${orderName} 님.|"></div>
     <div>Our Clothing을 이용해주셔서 감사합니다. 고객님의 주문이 확인 되었습니다.</div>
     <div style="color:red;">주문 폭주로 인해 배송이 지연될 수 있는 점 참고 부탁드립니다.</div>
     <div>평소보다 대략 3~5일 정도 소요 예정입니다.(토요일, 공휴일 제외).</div>
@@ -27,8 +27,9 @@
     <h5 th:text="${#temporals.format(date,'yyyy-MM-dd HH:mm')}"></h5>
     <h2 th:text="|${orderName}님의 주문내역|"></h2>
 
-    <h2>총 금액 </h2><h1 th:text="${total}"></h1>
-    <h1 th:text="${memo}"></h1>
+    <h2>total </h2>
+    <h4 th:text="${total}"></h4>
+    <h4 th:text="${memo}"></h4>
 <!--    <h1 th:text="주문시간  ${date}>orderDate"></h1>-->
 <!--    <h1 th:text="주문하신 상품의 총 금액은 ${total}원 입니다."></h1>-->
 <!--    <h1>image </h1><img src="${orders['order_id'].getItemEntity().getItemProfile()}">-->
