--- a/src/main/resources/templates/OrderEmail.html
+++ b/src/main/resources/templates/OrderEmail.html
@@ -23,8 +23,17 @@
     <div>감사합니다.</div>
     <div>관련하여 문의사항은 홈페이지의 Q&A로 주문번호와 함께 문의하여 주시기 바랍니다.</div>
     <hr>
+    
     <h2 th:text="|ORDER NO. ${orderId}|"></h2>
     <h5 th:text="${#temporals.format(date,'yyyy-MM-dd HH:mm')}"></h5>
+
+    <h3>SHIPPING ADDRESS</h3>
+    <h4 th:text="${orderName}"></h4>
+    <h4 th:text="${Addr1}"></h4>
+    <h4 th:text="${Addr2}"></h4>
+    <h4 th:text="${code}"></h4>
+    <h4 th:text="|TEL. ${receiptPhone}|"></h4>
+
     <h2 th:text="|${orderName}님의 주문내역|"></h2>
 
     <h2>total </h2>
