--- a/src/main/resources/templates/OrderEmail.html
+++ b/src/main/resources/templates/OrderEmail.html
@@ -37,7 +37,7 @@
     <h2 th:text="|${orderName}님의 주문내역|"></h2>
 
     <h2>total </h2>
-    <h4 th:text="${total}"></h4>
+    <h4 th:text="|${#numbers.formatInteger(total, 3, 'COMMA')}원|"></h4>
     <h4 th:text="${memo}"></h4>
 <!--    <h1 th:text="주문시간  ${date}>orderDate"></h1>-->
 <!--    <h1 th:text="주문하신 상품의 총 금액은 ${total}원 입니다."></h1>-->
